web/styles/app_components.css
/* ... */
.stream-privacy-type-icon {
    &.zulip-icon-globe {
        position: relative;
        top: 1px;
        padding-right: 1px;
        font-size: 0.75em;
    }

    &.zulip-icon-lock {
        position: relative;
        top: 0.06em;
        padding-right: 1px;
        font-size: 0.8em;
    }

    &.zulip-icon-hashtag {
        position: relative;
        top: 0.06em;
        padding-right: 1px;
        font-size: 0.75em;
    }
}

#settings_content,
#stream_settings,
#stream-creation,
#edit_bot_modal {
    .dropdown-list-widget .dropdown-list-wrapper {
        width: fit-content;

        & span {
            min-width: 210px;
            width: fit-content;
        }
    }
}

